--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Tests\" />
+    <Folder Include="Entities\" />
   </ItemGroup>
 
 </Project>
